--- a/src/services/LoginSystem.Identidade.API/LoginSystem.Identidade.API.csproj
+++ b/src/services/LoginSystem.Identidade.API/LoginSystem.Identidade.API.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EasyNetQ" Version="7.3.3" />
+    <PackageReference Include="EasyNetQ.Serialization.NewtonsoftJson" Version="7.3.3" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.10" />
@@ -19,6 +21,10 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />  
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\building blocks\LoginSystem.Core\LoginSystem.Core.csproj" />
   </ItemGroup>
 
 </Project>
